# hotelbookingsystem

./: CMakeLists.txt  README.md
createWindow/: initializeWindow.cpp  initializeWindow.h
fileSystem/: bookingfile.json  roomsfile.json
roomLogic/: bookingData.cpp  bookingData.h
src/: main.cpp
utilities/: inputValidation.cpp  inputValidation.h
